--- a/demo.html
+++ b/demo.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <title>th-date-convert Demo</title>
+    <title>lens-data-convert-date Demo</title>
     <script src="../webcomponentsjs/webcomponents.js"></script>
-    <link rel="import" href="th-date-convert.html">
+    <link rel="import" href="lens-data-convert-date.html">
   </head>
   <body unresolved>
 
-    <p>An example of `th-date-convert` looks like this:</p>
-    <th-date-convert></th-date-convert>
+    <p>An example of `lens-data-convert-date` looks like this:</p>
+    <lens-data-convert-date></lens-data-convert-date>
 
   </body>
 </html>
