--- a/lens-data-convert-date.html
+++ b/lens-data-convert-date.html
@@ -10,18 +10,18 @@ A Thelma component providing solution to no problem in particular.
 
 ##### Example
 
-    <th-date-convert></th-date-convert>
+    <lens-data-convert-date></lens-data-convert-date>
 
-@element th-date-convert
+@element lens-data-convert-date
 @blurb Element providing solution to no problem in particular.
 @status alpha
-@homepage http://nishacodes.github.io/th-date-convert
+@homepage http://nishacodes.github.io/lens-data-convert-date
 -->
 
-<polymer-element name="th-date-convert" attributes="input output dateColumn dateTypeFrom dateTypeTo">
+<polymer-element name="lens-data-convert-date" attributes="input output dateColumn dateTypeFrom dateTypeTo">
   <template>
     <core-style ref="theme"></core-style>
-    <link rel="stylesheet" href="th-date-convert.css">
+    <link rel="stylesheet" href="lens-data-convert-date.css">
 
     <!-- Column Selection -->
     <label> Date column:</label>
