--- a/test/lens-data-convert-date.html
+++ b/test/lens-data-convert-date.html
@@ -63,15 +63,15 @@
         });
       });
 
-      // test('keepOriginalData can be false', function(done) {
-      //   component.keepOriginalData = false;
+      test('keepOriginalData can be false', function(done) {
+        component.keepOriginalData = false;
 
-      //   flush(function() {
-      //     console.log(component.output[0]);
-      //     done();
-      //   });
+        flush(function() {
+          console.log(component.output[0]);
+          done();
+        });
 
-      // });
+      });
 
   });
 
