--- a/lens-data-convert-date.html
+++ b/lens-data-convert-date.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../polymer/polymer.html"> 
-<link rel="import" href="../th-theme/th-theme.html"> 
 <link rel="import" href="../iron-input/iron-input.html"> 
 <link rel="import" href="../iron-selector/iron-selector.html"> 
 
@@ -18,8 +17,97 @@ click <a href="http://momentjs.com/docs/#/displaying/format/" target="_blank">he
 -->
 
 <dom-module id="lens-data-convert-date">
-  <link rel="import" type="css" href="lens-data-convert-date.css">
-  <template>
+    <style>
+      :host {
+        display: inline-block;
+        color: black;
+        font-size: 1em;
+      }
+
+      label {
+        vertical-align: top;
+        margin-top: 15px;
+        display: block;
+        color: #2fa3af;
+        font-weight: 600;
+      }
+
+      .small {
+        font-size: 0.75em;
+      }
+
+      core-selector {
+        min-height: 10px;
+        display: inline-block;
+        max-height: 123px;
+      }
+
+      core-selector .col {
+        display: inline-block;
+        margin: 0 3px;
+        padding: 1px;
+        border: 1px solid #EEE;
+      }
+      core-selector .core-selected {
+        background-color: #ccc;
+
+      }
+
+      .selector {
+        min-height: 10px;
+        max-height: 100px;
+        overflow-y: scroll; 
+        display: inline-block;
+        border: 1px solid #EEE;
+        width: 265px;
+        cursor: pointer;
+      }
+
+      .selector div {
+        padding: 1px;
+        display: block;
+        margin: 0 3px;
+        padding: 1px;
+      }
+
+      .selector div:hover {
+        background-color: #eee;
+      }
+
+      .selector .core-selected {
+        background-color: #ccc;
+      }
+
+      #dateTypeFrom, #dateTypeTo {
+        border: 1px solid #eee; 
+        padding: 3px; 
+        width: 259px; 
+        font-size: 0.8em;
+        display: block;
+      }
+
+      iron-selector {
+        min-height: 10px;
+        display: inline-block;
+        max-height: 123px;
+        overflow-y: scroll; 
+      }
+
+      iron-selector .col {
+        padding: 1px;
+        border: 1px solid #EEE;
+      }
+
+      iron-selector .iron-selected {
+        background-color: #ccc;
+      }
+
+      label {
+        display: block;
+        margin-top: 5px;
+      }
+    </style>
+    <template>
     <core-style ref="theme"></core-style>
 
     <div class="lens-container lens-data"></div>
